controllers, reops, services for Message  pre-test with ERRor when deploy
No qualifying bean of type 'org.springframework.jdbc.core.JdbcTemplate' available: